; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_parser.c_ParseBlock.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_parser.c_ParseBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, %struct.TYPE_6__*, %struct.TYPE_6__*, i32 }

@.str = private unnamed_addr constant [33 x i8] c"Cannot allocate memory for Cmd!\0A\00", align 1
@C_BLOCK = common dso_local global i32 0, align 4
@InsideBlock = common dso_local global i32 0, align 4
@C_OP_LOWEST = common dso_local global i32 0, align 4
@bParseError = common dso_local global i64 0, align 8
@CurrentTokenType = common dso_local global i64 0, align 8
@TOK_END_BLOCK = common dso_local global i64 0, align 8
@STANDARD_SEPS = common dso_local global i32 0, align 4
@TOK_REDIRECTION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (i32*)* @ParseBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @ParseBlock(i32* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca %struct.TYPE_6__**, align 8
  store i32* %0, i32** %3, align 8
  %7 = call %struct.TYPE_6__* @cmd_alloc(i32 32)
  store %struct.TYPE_6__* %7, %struct.TYPE_6__** %4, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = icmp ne %struct.TYPE_6__* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %1
  %11 = call i32 @WARN(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 (...) @ParseError()
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @FreeRedirection(i32* %13)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %2, align 8
  br label %75

15:                                               ; preds = %1
  %16 = load i32, i32* @C_BLOCK, align 4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 3
  store i32 %16, i32* %18, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %20, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 2
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %22, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  store i32* %23, i32** %25, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  store %struct.TYPE_6__** %27, %struct.TYPE_6__*** %6, align 8
  %28 = load i32, i32* @InsideBlock, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* @InsideBlock, align 4
  br label %30

30:                                               ; preds = %15, %54
  %31 = load i32, i32* @C_OP_LOWEST, align 4
  %32 = call %struct.TYPE_6__* @ParseCommandOp(i32 %31)
  store %struct.TYPE_6__* %32, %struct.TYPE_6__** %5, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %34 = icmp ne %struct.TYPE_6__* %33, null
  br i1 %34, label %35, label %40

35:                                               ; preds = %30
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %37 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  store %struct.TYPE_6__* %36, %struct.TYPE_6__** %37, align 8
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 1
  store %struct.TYPE_6__** %39, %struct.TYPE_6__*** %6, align 8
  br label %49

40:                                               ; preds = %30
  %41 = load i64, i64* @bParseError, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %48

43:                                               ; preds = %40
  %44 = load i32, i32* @InsideBlock, align 4
  %45 = add nsw i32 %44, -1
  store i32 %45, i32* @InsideBlock, align 4
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %47 = call i32 @FreeCommand(%struct.TYPE_6__* %46)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %2, align 8
  br label %75

48:                                               ; preds = %40
  br label %49

49:                                               ; preds = %48, %35
  %50 = load i64, i64* @CurrentTokenType, align 8
  %51 = load i64, i64* @TOK_END_BLOCK, align 8
  %52 = icmp eq i64 %50, %51
  br i1 %52, label %53, label %54

53:                                               ; preds = %49
  br label %56

54:                                               ; preds = %49
  %55 = call i32 (...) @ParseChar()
  br label %30

56:                                               ; preds = %53
  %57 = load i32, i32* @InsideBlock, align 4
  %58 = add nsw i32 %57, -1
  store i32 %58, i32* @InsideBlock, align 4
  br label %59

59:                                               ; preds = %72, %56
  %60 = load i32, i32* @STANDARD_SEPS, align 4
  %61 = call i64 @ParseToken(i32 0, i32 %60)
  %62 = load i64, i64* @TOK_REDIRECTION, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %73

64:                                               ; preds = %59
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 0
  %67 = call i32 @ParseRedirection(i32** %66)
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %72, label %69

69:                                               ; preds = %64
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %71 = call i32 @FreeCommand(%struct.TYPE_6__* %70)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %2, align 8
  br label %75

72:                                               ; preds = %64
  br label %59

73:                                               ; preds = %59
  %74 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  store %struct.TYPE_6__* %74, %struct.TYPE_6__** %2, align 8
  br label %75

75:                                               ; preds = %73, %69, %43, %10
  %76 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  ret %struct.TYPE_6__* %76
}

declare dso_local %struct.TYPE_6__* @cmd_alloc(i32) #1

declare dso_local i32 @WARN(i8*) #1

declare dso_local i32 @ParseError(...) #1

declare dso_local i32 @FreeRedirection(i32*) #1

declare dso_local %struct.TYPE_6__* @ParseCommandOp(i32) #1

declare dso_local i32 @FreeCommand(%struct.TYPE_6__*) #1

declare dso_local i32 @ParseChar(...) #1

declare dso_local i64 @ParseToken(i32, i32) #1

declare dso_local i32 @ParseRedirection(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
